--- a/index.html
+++ b/index.html
@@ -58,13 +58,85 @@
         </section>
 
         <section id="details">
-            
+            <h3>Details</h3>
+                <dl>
+                    <dt>Prep Time: </dt>
+                    <dd>10 minutes</dd>
+                    <dt>Cook Time: </dt>
+                    <dd>10 minutes</dd>
+                    <dt>Total Time: </dt>
+                    <dd>20 minutes</dd>
+                    <dt>Author: </dt>
+                    <dd>Cheesington</dd>
+                    <dt>Servings: </dt>
+                    <dd>6 Tacos</dd>
+                </dl>
         </section>
 
+        <section id="ingredients-directions">
+            <h3>Ingredients</h3>
+                <ul>
+                    <li>Flank Steak</li>
+                    <li>Soy Sauce</li>
+                    <li>Worcestershire Sauce</li>
+                    <li>Lime</li>
+                    <li>Minced Garlic</li>
+                    <li>Cilantro</li>
+                    <li>Chili Powder</li>
+                    <li>Cumin</li>
+                    <li>Salt</li>
+                    <li>Pepper</li>
+                    <li>Corn Tortilla</li>
+                </ul>
 
+            <h3>Directions</h3>
+                <ol>
+                    <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
+                    <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
+                    <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
+                    <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+                </ol>
+        </section>
 
-
-
+        <section id="side-dishes">
+            <h3>Need Some Side Dishes?</h3>
+            <section>
+                <h3>Mexican Rice</h3>
+                    <img src="images/mexican-rice.png" alt="mexican rice">
+                    <p>Traditional recipe with a twist.</p>
+                    <dl>
+                        <dt>Rating</dt>
+                        <dd>4 of 5 Stars</dd>
+                     </dl>
+            </section>
+            <section>
+                <h3>Salsa</h3>
+                    <img src="images/salsa.png" alt="salsa">
+                    <p>Just the right amount of spice.</p>
+                    <dl>
+                        <dt>Rating</dt>
+                        <dd>5 of 5 Stars</dd>
+                     </dl>
+            </section>
+            <section>
+                <h3>Guacamole</h3>
+                    <img src="images/guacamole.png" alt="guacamole">
+                    <p>Fresh and healthy.</p>
+                    <dl>
+                        <dt>Rating</dt>
+                        <dd>4 of 5 Stars</dd>
+                     </dl>
+            </section>
+            <section>
+                <h3>Tortillas</h3>
+                    <img src="images/tortillas.png" alt="tortillas">
+                    <p>Fresh and healthy.</p>
+                    <dl>
+                        <dt>Rating</dt>
+                        <dd>4 of 5 Stars</dd>
+                     </dl>
+            </section>
+        </section>
 
         <nav>
             <h2>Main Navigation</h2>
@@ -95,7 +167,9 @@
             <label for="site-search">Search the site:</label>
             <input type="search" id="site-search" name="q" />
             <button>Search</button>
+    </main>
     
+    <footer>
             <h2>Connect</h2>
             <ul id="socialmedia">
                 <li><a href="#Facebook"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -119,6 +193,9 @@
                   </svg></a>Tik Tok</li>
             </ul>
         </nav>
-    </main>
+
+        <p><small>Copyright &copy;2022 <br> Taco Cheesington</small></p>
+        <img src="images/taco-cheesington.png" alt="mexican food">
+    </footer>
 </body>
 </html>
