--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 
         <nav>
             <h2>Main Navigation</h2>
+            <input class="dropdown" type="checkbox" id="dropdown"/>
+            <label class="dropdown-icon" for="dropdown"><span></span></label>
             <ul id="mainnav">
                 <li><a href="#Home"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -168,7 +170,7 @@
             <input type="search" id="site-search" name="q" />
             <button>Search</button>
     </main>
-    
+
     <footer>
             <h2>Connect</h2>
             <ul id="socialmedia">
