--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <img src="images/street-tacos.png" alt="street tacos on plate">
             <p>
                 Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
-
+            </p>
+            <p>
                 These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!
             </p>
     </header>
@@ -72,7 +73,7 @@
 
         <section id="ingredients-directions">
             <h3>Ingredients</h3>
-                <ul>
+                <ul id="ingredients-list">
                     <li>Flank Steak</li>
                     <li>Soy Sauce</li>
                     <li>Worcestershire Sauce</li>
@@ -87,7 +88,7 @@
                 </ul>
 
             <h3>Directions</h3>
-                <ol>
+                <ol id="directions-list">
                     <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
                     <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
                     <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
@@ -96,7 +97,7 @@
         </section>
     </main>
 
-        <h3>Need Some Side Dishes?</h3>
+        <h3 id="aside-h3">Need Some Side Dishes?</h3>
         <aside id="side-dishes">
             <section>
                 <h4>Mexican Rice</h4>
@@ -179,7 +180,7 @@
     
     <footer>
             <h2>Connect</h2>
-            <ul id="socialmedia">
+            <ul id="social-media">
                 <li><a href="#Facebook"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
