--- a/index.html
+++ b/index.html
@@ -99,14 +99,20 @@
 
         <h3 id="aside-h3">Need Some Side Dishes?</h3>
         <aside id="side-dishes">
-            <section>
+            <section class="side-grid">
+                <div class="side-h4">
                 <h4>Mexican Rice</h4>
+                </div>
+                <div class="side-img">
                     <img src="images/mexican-rice.png" alt="mexican rice">
+                </div>
+                    <div class="side-text">
                     <p>Traditional recipe with a twist.</p>
                     <dl>
                         <dt>Rating</dt>
                         <dd>4 of 5 Stars</dd>
                      </dl>
+                    </div>
             </section>
             <section>
                 <h4>Salsa</h4>
@@ -202,8 +208,10 @@
                   </svg></a>Tik Tok</li>
             </ul>
 
-        <p><small>Copyright &copy;2022 <br> Taco Cheesington</small></p>
-        <img src="images/taco-cheesington.png" alt="mexican food">
+        <section>
+            <p><small>Copyright &copy;2022 <br> Taco Cheesington</small></p>    
+            <img src="images/taco-cheesington.png" alt="mexican food">
+        </section>
     </footer>
 </body>
 </html>
