--- a/index.html
+++ b/index.html
@@ -99,22 +99,16 @@
 
         <h3 id="aside-h3">Need Some Side Dishes?</h3>
         <aside id="side-dishes">
-            <section class="side-grid">
-                <div class="side-h4">
+            <section class="aside-grid">
                 <h4>Mexican Rice</h4>
-                </div>
-                <div class="side-img">
                     <img src="images/mexican-rice.png" alt="mexican rice">
-                </div>
-                    <div class="side-text">
                     <p>Traditional recipe with a twist.</p>
                     <dl>
                         <dt>Rating</dt>
                         <dd>4 of 5 Stars</dd>
                      </dl>
-                    </div>
             </section>
-            <section>
+            <section class="aside-grid">
                 <h4>Salsa</h4>
                     <img src="images/salsa.png" alt="salsa">
                     <p>Just the right amount of spice.</p>
@@ -123,7 +117,7 @@
                         <dd>5 of 5 Stars</dd>
                      </dl>
             </section>
-            <section>
+            <section class="aside-grid">
                 <h4>Guacamole</h4>
                     <img src="images/guacamole.png" alt="guacamole">
                     <p>Fresh and healthy.</p>
@@ -132,7 +126,7 @@
                         <dd>4 of 5 Stars</dd>
                      </dl>
             </section>
-            <section>
+            <section class="aside-grid">
                 <h4>Tortillas</h4>
                     <img src="images/tortillas.png" alt="tortillas">
                     <p>Fresh and healthy.</p>
@@ -145,8 +139,12 @@
 
         <nav>
             <h2>Main Navigation</h2>
-            <input class="dropdown" type="checkbox" id="dropdown"/>
-            <label class="dropdown-icon" for="dropdown"><span></span></label>
+                <input type="checkbox" id="dropdown" />
+                <label for="dropdown"><span><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" style="enable-background:new 0 0 40 40" xml:space="preserve">
+                    <path d="M36 17.6c.1 1.8.1 3.6.1 5.4.1 2.7 0 5.5-.9 8-.5 1.4-1.3 2.6-2.4 3.6-3.3 2.7-6 2.4-12.6 2.4-4.6 0-9.2.2-12.2-1.9-2.5-1.8-3.6-4.2-3.8-7.1-.2-3.6.1-7.2.1-10.8 0-2.6.6-5.1 1.9-7.4 2.5-4.5 7.3-7.5 12.4-8 .4-.1.9-.1 1.4-.1 5.2 0 10.1 2.6 13 6.8 1 1.5 1.8 3.1 2.3 4.9.4 1.3.6 2.7.7 4.2z" style="fill:none;stroke:#eb5428;stroke-width:2;stroke-miterlimit:10"/>
+                    <path d="M36.1 22.6c0 .5-.1 1-.5 1.4-.5.7-1.4 1.2-2.6 1.3-2.8.2-5.8.1-8.6.1h-12c-1.3 0-2.6 0-3.8-.1-1.1 0-2.4 0-3.3-.6-.8-.6-1.2-1.4-1.2-2.2 0-.9.3-1.8 1.5-2.3.9-.4 2-.5 3.1-.5 1.4 0 2.8-.1 4.3-.1h14.5c1.2 0 2.3 0 3.5.1 1.7.1 3.3-.1 4.4 1 .3.6.7 1.3.7 1.9z" style="fill:none;stroke:#fff;stroke-width:2.0832;stroke-miterlimit:10"/>
+                    <path d="M38.5 22.6c0 .9-.2 1.7-.5 2.5-.6 1.3-1.7 2.1-3 2.2-3.3.3-6.7.2-9.9.2H11.2c-1.5 0-3-.1-4.4-.1-1.3-.1-2.8 0-3.8-1-.9-1-1.3-2.5-1.3-3.8 0-1.6.3-3.1 1.7-4 1-.7 2.3-.8 3.5-.8 1.6-.1 3.3-.1 4.9-.1H28.5c1.3 0 2.7 0 4 .1 2 .1 3.8-.1 5.1 1.7.5.9.9 2 .9 3.1z" style="fill:none;stroke:#eb5428;stroke-width:2.9408;stroke-miterlimit:10"/>
+                </svg>Menu</span></label>
             <ul id="mainnav">
                 <li><a href="#Home"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tools-kitchen" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -208,7 +206,7 @@
                   </svg></a>Tik Tok</li>
             </ul>
 
-        <section>
+        <section id="copyright">
             <p><small>Copyright &copy;2022 <br> Taco Cheesington</small></p>    
             <img src="images/taco-cheesington.png" alt="mexican food">
         </section>
