html and css updated

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         </section>
 
         <section id="ingredients-directions">
+            <div>
             <h3>Ingredients</h3>
                 <ul id="ingredients-list">
                     <li>Flank Steak</li>
@@ -86,7 +87,8 @@
                     <li>Pepper</li>
                     <li>Corn Tortilla</li>
                 </ul>
-
+            </div>
+            <div>
             <h3>Directions</h3>
                 <ol id="directions-list">
                     <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
@@ -94,11 +96,13 @@
                     <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
                     <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
                 </ol>
+            </div>
         </section>
     </main>
 
     <aside>
         <h3>Need some side dishes?</h3>
+        <div id="medium-grid">
         <section class="aside-grid">
             <div>
                 <a href="#"><img src="images/mexican-rice.png" alt="bowl of mexican rice"></a>
@@ -243,6 +247,7 @@
                 </section>
             </div>
         </section>
+        </div>
     </aside>
         <nav>
             <h2>Main Navigation</h2>
@@ -291,7 +296,9 @@
     
         <footer>
             <h2>Connect</h2>
-            <section>
+            <div id="footer-flex">
+            <section id="footer-large">
+                <div>
                 <h3>Social Media</h3>
                 <ul id="social">
                     <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#EB5428" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -322,7 +329,9 @@
                     <p><small>Copyright 2022</small></p>
                     <p><small>Taco Cheesington</small></p>
                 </div>
+                </div>
             </section>
+            </div>
         </footer>
 </body>
 </html>
